# pivot-tactical

./: .gitignore  LICENSE  NOTICE  README.md  REBUILD-LGPL.md  REBUILD-QT.md  RELEASING.md  ROADMAP.md  THIRD-PARTY-LICENSES.md  test_buzz.py
.Jules/: palette.md
.github/workflows/: ci.yml  claude.yml  prerelease.yml  (+1 more)
.jules/: archivist.md  bolt.md  palette.md  sentinel.md  sweep.md
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vite.config.ts
packaging/: gen_buildinfo.py  pivot.iss  pivot.spec  sign_appcast.py
server/: pyproject.toml  requirements-dev.txt  requirements.txt
server/pivot/: __init__.py  __main__.py  auth.py  config.py  exporting.py  version.py  win_tray.py
server/pivot/api/: __init__.py  app.py  deps.py  rest.py  schemas.py  ws.py
server/pivot/audio/: __init__.py  mixer.py  noise_stream.py  pcm.py  recording.py  render.py  router.py
server/pivot/core/: __init__.py  bands.py  crypto.py  radios.py  timebase.py
server/pivot/db/: __init__.py  config_store.py  database.py  migrations.py  models.py  repository.py
server/pivot/dsp/: __init__.py  digital.py  engine.py  fading.py  filters.py  hash_gen.py  noise.py  tone.py
server/pivot/gui/: __init__.py  app.py  main_window.py  theme.py
server/pivot/gui/tabs/: __init__.py  about.py  band_radios.py  instructor.py  settings.py  status.py
server/pivot/runtime/: __init__.py  lifecycle.py  manager.py  redirect.py  reveal.py  tls.py
server/pivot/tools/: __init__.py  licenses.py
server/pivot/transcription/: __init__.py  whisper.py  worker.py
server/pivot/updates/: __init__.py  github.py  layout.py  manager.py  manager.py.orig  service.py  signing.py  winsparkle.py
server/tests/: conftest.py  test_api.py  test_api_update_service.py  test_auth.py  test_bands.py  test_cors_config.py  test_crypto.py  test_db.py  test_deps.py  test_digital.py  test_dsp.py  test_entrypoint.py  test_exporting.py  test_exporting_vuln.py  test_filters.py  test_github.py  test_gui_smoke.py  test_idle_noise.py  test_layout.py  test_licenses.py  test_mixer.py  test_net_scenarios.py  test_noise_layers.py  test_pcm.py  test_radios.py  test_recording.py  test_redirect.py  test_runtime.py  test_schemas_ssrf.py  test_sign_appcast.py  test_signing.py  test_tls.py  test_transcription.py  test_update_service.py  test_updates.py  test_version_time.py  test_win_tray.py  test_ws.py
(+34 files in other folders)
