[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pivot-tactical"
version = "1.0.0"
description = "PIVOT — Procedural Interactive Voice Operations Trainer (Tactical). LAN-only radio voice-procedure trainer."
# NOTE: no `readme` here — setuptools refuses files outside the package root
# (server/), and the project README lives at the repo root. See README.md.
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "PIVOT Tactical Contributors" }]
keywords = ["radio", "training", "voice-procedure", "webrtc", "dsp", "simulation"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Communications :: Ham Radio",
    "Topic :: Education",
]

# Runtime dependencies are pinned in requirements.txt for the packaged build.
# This list mirrors them for `pip install -e .` development installs.
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.1",
    "numpy>=1.26",
    "scipy>=1.11",
    "soundfile>=0.12",
    "websockets>=12.0",
]

[project.optional-dependencies]
# Heavy / native-dependency extras kept separate so core domain logic and tests
# install and run without them (CI domain tests, dev machines without GPUs).
# The server is headless (browser-based instructor + trainees) — no GUI extra.
audio = ["aiortc>=1.6", "av>=12.0"]
transcription = ["faster-whisper>=1.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27", "ruff>=0.4"]

[project.scripts]
pivot = "pivot.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pivot*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI dependency-injection markers are evaluated once and are the idiomatic
# way to declare endpoint dependencies in default arguments.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path", "fastapi.Body"]
